kubernetes/apps/default/open-webui/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
spec:
  type: ExternalName
  externalName: pc01.hole
