kubernetes/apps/default/open-webui/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: open-webui
spec:
  parentRefs:
    - name: external
      namespace: kube-system
      sectionName: https
  hostnames:
    - llm.${SECRET_DOMAIN}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: open-webui
          port: 9000
      filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: strict-transport-security
                value: max-age=31536000
